@@ -1,6 +1,7 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.fractionsintro.matchinggame.model;
 
+import edu.colorado.phet.common.games.GameAudioPlayer;
 import edu.colorado.phet.common.phetcommon.model.clock.Clock;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockAdapter;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
@@ -9,7 +10,6 @@ import edu.colorado.phet.common.phetcommon.model.property.ChangeObserver;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 
 import static edu.colorado.phet.fractionsintro.matchinggame.model.MatchingGameState.initialState;
-import static edu.colorado.phet.fractionsintro.matchinggame.view.MatchingGameAudio.playAudioClip;
 
 /**
  * The model is the container for the immutable state.
@@ -17,14 +17,15 @@ import static edu.colorado.phet.fractionsintro.matchinggame.view.MatchingGameAud
  * @author Sam Reid
  */
 public class MatchingGameModel {
+    public final GameAudioPlayer gameAudioPlayer = new GameAudioPlayer( true );
     public final Property<MatchingGameState> state = new Property<MatchingGameState>( initialState() ) {{
         addObserver( new ChangeObserver<MatchingGameState>() {
             @Override public void update( final MatchingGameState newValue, final MatchingGameState oldValue ) {
-                if ( newValue.audio && oldValue.getLeftScaleValue() == 0.0 && newValue.getLeftScaleValue() > 0 ) {
-                    playAudioClip( newValue.getLeftScaleValue() );
+                if ( newValue.audio && oldValue.state == State.WAITING_FOR_USER_TO_CHECK_ANSWER && newValue.state == State.RIGHT ) {
+                    gameAudioPlayer.correctAnswer();
                 }
-                if ( newValue.audio && oldValue.getRightScaleValue() == 0.0 && newValue.getRightScaleValue() > 0 ) {
-                    playAudioClip( newValue.getRightScaleValue() );
+                if ( newValue.audio && oldValue.state == State.WAITING_FOR_USER_TO_CHECK_ANSWER && newValue.state == State.SHOWING_WHY_ANSWER_WRONG ) {
+                    gameAudioPlayer.wrongAnswer();
                 }
             }
         } );
